syntax = "proto3";

package match.v1;

// HTTP annotations
import "google/api/annotations.proto";

service matchService {
  rpc MatchPartnersWithRequest(MatchPartnersWithRequestInput) returns (MatchPartnersWithRequestOutput) {
    option (google.api.http) = {
      get: "/v1/partners/{material}/{location}"
    };
  }
}

message Partner {
  uint32 id = 1;
  string materials = 2;
  uint32 rating = 3;
  string location = 4;
  double radius = 5;
  double distance = 6;
}

message MatchPartnersWithRequestInput {
  string material = 1;
  string location = 2;
  /* unused: Square meters of the floor */
  /* unused: Phone number (for the partner to contact the customer) */
}

message MatchPartnersWithRequestOutput {
  repeated Partner partner = 1;
}
