syntax = "proto3";

package match.v1;

// HTTP annotations
import "google/api/annotations.proto";

service matchService {
  rpc ListPartnersForTask(ListRequestCustomersRequest) returns (ListPartnersForTaskResponse) {
    option (google.api.http) = {
      get: "/v1/partners/{material}/{location}"
    };
  }
}

message Partner {
  uint32 id = 1;
  string materials = 2;
  uint32 rating = 3;
  string location = 4;
  uint32 distance = 5;
}

message ListPartnersForTaskRequest {
  string material = 1;
  string location = 2;
}

message ListPartnersForTaskResponse {
  string material = 1;
  string location = 2;
  repeated Partner partner = 3;
}
